syntax = 'proto3';

package svc;

option go_package = "svc";

service Service {
    rpc Greet(GreetRequest) returns (GreetResponse) {}
    rpc Chat(stream Message) returns (stream MessageResponse) {}
    rpc Echo(EchoRequest) returns (stream EchoResponse) {}
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string greeting = 1;
}

message Message {
    string message = 1;
}

message MessageResponse {
    string response = 1;
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string echo = 1;
}
